Sun Oct 28 14:09:44 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong usage
	  in document.

Sun Oct 28 14:03:48 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong method
	  names in document.

Sun Oct 28 10:12:15 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: `tree` should return the
	  same thing on every call.

	* test/psych/visitors/test_yaml_tree.rb: related test.

Sun Oct 28 10:05:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: YAML Tree object should
	  be able to take an emitter object as it's output.

	* test/psych/visitors/test_yaml_tree.rb: related test.

Sun Oct 28 08:23:16 2012  Koichi Sasada  <ko1@atdot.net>

	* bignum.c (bignew_1): Bignum instances are frozen.
	  Feature #3222

	* include/ruby/ruby.h: Fixnum instances are also frozen.

	* class.c (singleton_class_of): check Bignum before
	  singleton cheking.

	* test/ruby/test_bignum.rb: add a test.

	* test/ruby/test_fixnum.rb: ditto.

	* test/ruby/marshaltestlib.rb, test/ruby/test_eval.rb,
	  test/ruby/test_object.rb: catch up above changes.

Sun Oct 28 04:38:06 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_define_method): remove type and frozen checking.
	  Checking is done in `rb_singleton_class()'.

Sun Oct 28 00:49:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assign_in_cond): warn for static content object asignments
	  in conditional statements.  [ruby-dev:43083] [Feature #4299]

Sat Oct 27 23:33:41 2012  Benoit Daloze  <eregontp@gmail.com>

	* gc.c (gc_profile_result, gc_profile_report): use internal structures
	  to avoid allocations and progressively print the output for #report.

Sat Oct 27 11:01:10 2012  Koichi Sasada  <ko1@atdot.net>

	* numeric.c (rb_float_new_in_heap), include/ruby/ruby.h: 
	  make all Float objects frozen.