@@ -1,3 +1,9 @@
+Sun Oct 28 14:59:14 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rexml/document.rb (REXML::Document#write): Accept options
+	  Hash as argument.
+	* test/rexml/test_document.rb: Add tests for the above change.
+
 Sun Oct 28 14:09:44 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/document.rb (REXML::Document#write): Fix wrong usage
